# wincamcfg

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TROUBLESHOOTING.md  build.rs
.claude/: settings.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/instructions/: rust.instructions.md
.github/workflows/: auto-patch-bump.yml  ci.yml  dependency-review.yml  release.yml
src/: lib.rs  main.rs  webcam.rs
