[package]
name = "wincamcfg"
version = "0.2.15"
edition = "2024"
description = "A command line utility for managing webcam configuration on windows"
license = "MIT"
repository = "https://github.com/andrewj-t/wincamcfg/"
homepage = "https://github.com/andrewj-t/wincamcfg/"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
indexmap = { version = "2.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = "0.3"
windows = { version = ">=0.59, <=0.62", features = [
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_DirectShow",
    "Win32_System_Variant",
    "Win32_System_Ole",
] }

[build-dependencies]
winresource = "0.1"
